# Gh05t

./: README.md
ADS1299_Breakout_Board/: ADS1299_Breakout_Board.kicad_pcb  ADS1299_Breakout_Board.kicad_pro  ADS1299_Breakout_Board.kicad_sch  Components to be ordered.xlsx  fp-lib-table  sym-lib-table
Applications/: README.md
Balanced_Performance/: README.md
Combined_PCB/: Combined_PCB.SLDASM  Combined_PCB.kicad_pcb  Combined_PCB.kicad_prl  Combined_PCB.kicad_pro  Housing.SLDASM  Housing.SLDPRT  adc_microcontroller.kicad_sch  fp-lib-table  inputs_filtering.kicad_sch  sym-lib-table
EEG Headset/: README.md
Gh05t GUI/: GH05T_GUI.spec  README.md  main.py  requirements.txt
High_Performance/: README.md  document_data.py  link_to_video.txt
Machine_Learning/: EDAPA.ipynb  HLDS.ipynb  ITLPPD.ipynb  NLMS.C  QKLMS.ipynb  SDED.C  SDED.ipynb  VSSAPA.C
Muxed_ADC_PCB/: Muxed_ADC_PCB.kicad_prl  Muxed_ADC_PCB.kicad_pro
PCB_Schematic/: PCBSchematic.kicad_sch
Reading_EEG_Data/: README.md  code.py  link_to_video.txt
eeg_gui/: README.md  gui.py
eeg_gui_PyQt/: ESP32_data_export.py  README.md  main.py  requirements.txt
esp32 microcontroller/: README.md
esp32_server_adc/: README.md
ml-model/: APA.ipynb  Deconvolution_Wiener_LMS.ipynb  QKLMS.C  QKLMS.ipynb  README.md  SDED.C  SDED.ipynb  p2_training.ipynb
pose-recognition/: 3DPoseQuantization.ipynb  README.md  vis_pose.py
pre-alpha-gui/: gui.py
rpi_low_cost/Gh0st/: CMakeLists.txt  main.c
rpi_low_cost/Gh0st/.cache/clangd/index/: lwipopts.h.F290C43471DE5CCB.idx
signal-preprocessing/: README.md  ica_tools.py  (+2 more)
(+281 files in other folders)
